--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1587,6 +1587,10 @@ p > tag {
 @media (max-width: 900px) { 
 
 
+.extra-nav .container article h3 {
+	font-size: 28px;
+
+}
 
 
 
